--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@
 .img-thumbnail {
   cursor: pointer;
 }
-
+#not-found{
+  display: none;
+  text-align: center;
+  justify-content: center;
+  margin: 50px;
+}
 .added {
   border: 2px solid #1e1743;
   
